# NOTES_APP

./: .gitignore  Cargo.toml  Justfile  LICENSE  README.md  initial brain dump.md
.github/workflows/: ci.yml
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src-tauri/vault/: 01KDCC397Z5PAGCFCSCFFYE2RY.md  01KDCD8JNAPAMJQYBG69BQW0BJ.md  01KDCD92QJZ0QYVAG9XVFN3F3R.md  01KDCD9WKR6PWZ9B2SJS2T74C7.md  index.db
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/oplog/: Cargo.toml
crates/oplog/src/: lib.rs
crates/plugin-host/: Cargo.toml
crates/plugin-host/src/: lib.rs
crates/store/: Cargo.toml
crates/store/src/: lib.rs
crates/sync/: Cargo.toml
crates/sync/src/: lib.rs
docs/: ARCHITECTURE.md  CONTEXT_SUMMARY.md  ROADMAP.md  ROADMAP.mp
plugins/hello-world/: README.md  manifest.json
scripts/: README.md  bootstrap.ps1  bootstrap.sh  check.ps1  frontend.ps1  run.ps1
testing vault directory/: 01KDCDDQ8M0F0E1H51M7VGGXFQ.md  01KDCDHV6M9ZPDYGWVTBAZ5PD1.md  01KDCGKF20HE7XECQC9BPZ6W21.md  01KDEKCENC8TMFFE18PMZQSR4S.md  index.db
