[package]
name = "notes-sync"
version = "0.1.0"
edition = "2021"

[dependencies]
serde.workspace = true
serde_json.workspace = true
ulid.workspace = true
thiserror.workspace = true
chrono.workspace = true
rand.workspace = true
hex.workspace = true
notes-oplog = { path = "../oplog" }
ed25519-dalek.workspace = true
base64.workspace = true
local_ipaddress.workspace = true
chacha20poly1305 = "0.10"

[dev-dependencies]
tempfile = "3"
